--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         echo "=== Setting up test environment ==="
         docker run --rm \
           -v $PWD:/mnt \
-          --privileged \  # Добавляем привилегии
+          --privileged \
           tyvik/kubsh_test:master \
           bash -c "
             # Настраиваем sudo без пароля для тестов
