--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,6 @@ jobs:
           kubsh-builder \
           bash -c "
             cd /workspace && \
-            echo 'Files in workspace:' && \
-            ls -la && \
             echo '=== Compiling ===' && \
             make && \
             echo '=== Creating package ===' && \
@@ -38,24 +36,42 @@ jobs:
             ls -la *.deb
           "
       
-    - name: Verify package
+    - name: Setup test container (как у товарища)
       run: |
-        echo "=== Verifying package ==="
-        ls -la *.deb
-        file kubsh.deb || echo "No deb file found"
+        echo "=== Setting up test container ==="
+        # Запускаем контейнер в фоне
+        docker run -d --name kubsh-test \
+          --device /dev/fuse \
+          --cap-add SYS_ADMIN \
+          --security-opt apparmor:unconfined \
+          --user root \
+          tyvik/kubsh_test:master tail -f /dev/null
+        
+        # Устанавливаем зависимости
+        docker exec kubsh-test bash -c "
+          apt-get update
+          apt-get install -y fuse3 adduser
+          ln -sf /usr/lib/x86_64-linux-gnu/libfuse3.so /usr/lib/x86_64-linux-gnu/libfuse3.so.3
+        "
+        
+        # Копируем пакет в контейнер
+        docker cp kubsh.deb kubsh-test:/mnt/
       
-    - name: Run tests
+    - name: Run tests in container
       run: |
         echo "=== Running tests ==="
-        docker run --rm \
-          -v $PWD:/mnt \
-          -v /tmp/shared_passwd:/etc/passwd:rw \
-          --user root \
-          tyvik/kubsh_test:master \
-          bash -c "
-            echo '=== Installing package ==='
-            cd /mnt && apt install -y ./kubsh.deb
-            
-            echo '=== Running tests ==='
-            cd /opt && pytest -v
-          "
+        docker exec kubsh-test bash -c "
+          echo '=== Installing package ==='
+          cd /mnt && apt-get install -y ./kubsh.deb
+          
+          echo '=== Checking kubsh permissions ==='
+          ls -la /usr/bin/kubsh
+          
+          echo '=== Running tests ==='
+          cd /opt && pytest -v --log-cli-level=DEBUG
+        "
+      
+    - name: Cleanup
+      run: |
+        docker stop kubsh-test || true
+        docker rm kubsh-test || true
