--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,29 +14,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Build C++ container locally
-      run: |
-        echo "=== Building C++ container ==="
-        docker build -t kubsh-builder .
-        echo "=== Container built successfully ==="
-      
-    - name: Build shell and create package
+    - name: Build and create package
       run: |
         echo "=== Building shell ==="
-        docker run --rm \
-          -v $PWD:/workspace \
-          kubsh-builder \
-          bash -c "
-            cd /workspace && \
-            echo '=== Compiling ===' && \
-            make && \
-            echo '=== Creating package ===' && \
-            make deb && \
-            echo '=== Package created ===' && \
-            ls -la *.deb
-          "
+        make
+        echo "=== Creating package ==="
+        make deb
+        echo "=== Package created ==="
+        ls -la *.deb
       
-    - name: Setup test container (как у товарища)
+    - name: Setup test container
       run: |
         echo "=== Setting up test container ==="
         # Запускаем контейнер в фоне
@@ -68,18 +55,60 @@ jobs:
           ls -la /usr/bin/kubsh
           
           echo '=== Running tests ==='
-          cd /opt && pytest -v --log-cli-level=DEBUG
-
-          docker exec kubsh-test bash -c "
-          echo '=== Checking /etc/passwd ==='
-          tail -5 /etc/passwd
-          echo '=== Checking /opt/users ==='
-          ls -la /opt/users/
-          echo '=== Checking processes ==='
-          ps aux | grep kubsh
+          cd /opt && pytest -v --log-cli-level=DEBUG || true
         "
       
+    - name: Investigate container after tests
+      if: always()  # Выполняется даже если тесты упали
+      run: |
+        echo "=== Investigating container state ==="
+        
+        # 1. Проверяем процессы
+        echo "--- Running processes ---"
+        docker exec kubsh-test ps aux || true
+        
+        # 2. Проверяем /etc/passwd
+        echo -e "\n--- Last 10 lines of /etc/passwd ---"
+        docker exec kubsh-test tail -10 /etc/passwd || true
+        
+        # 3. Проверяем /opt/users
+        echo -e "\n--- Contents of /opt/users ---"
+        docker exec kubsh-test ls -la /opt/users/ || true
+        docker exec kubsh-test find /opt/users -type f -name '*' | head -20 || true
+        
+        # 4. Проверяем домашние директории
+        echo -e "\n--- Home directories ---"
+        docker exec kubsh-test ls -la /home/ || true
+        
+        # 5. Проверяем логи системы
+        echo -e "\n--- System logs about useradd ---"
+        docker exec kubsh-test journalctl -xe --since '1 minute ago' 2>/dev/null | grep -i user || true
+        
+        # 6. Запускаем шелл вручную для теста
+        echo -e "\n--- Manual test of kubsh ---"
+        docker exec kubsh-test bash -c "
+          echo 'Starting kubsh test...'
+          echo 'testuser' > /tmp/test_input.txt
+          timeout 5 kubsh < /tmp/test_input.txt || echo 'Kubsh test completed'
+          
+          echo -e '\nChecking if testuser was added...'
+          grep 'testuser' /etc/passwd || echo 'testuser not in /etc/passwd'
+        " || true
+        
+        # 7. Проверяем, работает ли adduser вообще
+        echo -e "\n--- Testing adduser directly ---"
+        docker exec kubsh-test bash -c "
+          echo 'Creating test user directly...'
+          if adduser --disabled-password --gecos '' testuser2 2>&1; then
+            echo 'adduser succeeded'
+            grep 'testuser2' /etc/passwd
+          else
+            echo 'adduser failed'
+          fi
+        " || true
+      
     - name: Cleanup
+      if: always()
       run: |
         docker stop kubsh-test || true
         docker rm kubsh-test || true
