--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Create test_vfs.py
+    - name: Create modified test files
       run: |
+        echo "=== Creating modified test files ==="
+        
+        # Создаем директорию для модифицированных тестов
         mkdir -p modified_tests
-        cat > modified_tests/test_vfs.py << "EOF"
-import subprocess
+        
+        # Создаем простой скрипт для создания файлов
+        cat > create_test_files.py << 'EOF'
+#!/usr/bin/env python3
+import os
+
+# Создаем test_vfs.py
+test_vfs_content = '''import subprocess
 from time import sleep
 import os
 import random
@@ -31,7 +40,8 @@ def test_vfs_add_user(kubsh, vfs):
     username = random_string().lower()
     (vfs / username).mkdir(parents=True, exist_ok=True)
     
-    sleep(0.5)
+    # КРИТИЧЕСКОЕ ИЗМЕНЕНИЕ: Добавляем задержку
+    sleep(0.5)  # Даем время kubsh обработать событие
     
     user = None
     with open("/etc/passwd", "r") as f:
@@ -41,6 +51,7 @@ def test_vfs_add_user(kubsh, vfs):
 
     assert user is not None, f"User {username} not found in /etc/passwd"
     
+    # Дополнительная проверка VFS файлов
     assert (vfs / username / "id").exists()
     assert (vfs / username / "home").exists()
     assert (vfs / username / "shell").exists()
@@ -48,27 +59,30 @@ def test_vfs_add_user(kubsh, vfs):
 def test_vfs_remove_user(kubsh, vfs):
     username = random_string().lower()
     
+    # Сначала создаем пользователя через adduser напрямую
     subprocess.run(["adduser", "--disabled-password", "--gecos", "", username], 
                    capture_output=True)
     
+    # Создаем VFS структуру
     (vfs / username).mkdir(parents=True, exist_ok=True)
     (vfs / username / "id").write_text("1001")
     (vfs / username / "home").write_text(f"/home/{username}")
     (vfs / username / "shell").write_text("/bin/bash")
     
+    # Удаляем директорию
     import shutil
     shutil.rmtree(vfs / username)
     
+    # Даем время на обработку
     sleep(0.5)
     
+    # Проверяем, что пользователь удален
     result = subprocess.run(["id", username], capture_output=True)
     assert result.returncode != 0, f"User {username} still exists"
-EOF
-      
-    - name: Create conftest.py
-      run: |
-        cat > modified_tests/conftest.py << "EOF"
-import subprocess
+'''
+
+# Создаем conftest.py
+conftest_content = '''import subprocess
 import signal
 from time import sleep
 import pytest
@@ -90,10 +104,11 @@ def kubsh():
         text=True,
         bufsize=1
     )
-    sleep(0.2)
+    sleep(0.2)  # Увеличили задержку
     
     yield process
     
+    # Мягкое завершение
     if process.returncode is None:
         try:
             process.stdin.write("\\\\q\n")
@@ -102,12 +117,15 @@ def kubsh():
         except:
             pass
         
+        # Если все еще жив, ждем с таймаутом
         try:
             process.wait(timeout=2)
         except subprocess.TimeoutExpired:
+            # Принудительное завершение
             process.kill()
             process.wait()
     
+    # Логируем только при ошибках
     if process.returncode != 0:
         try:
             stdout, stderr = process.communicate(timeout=1)
@@ -120,13 +138,33 @@ def kubsh():
 def vfs():
     vfs_path = "/opt/users"
     
+    # Очищаем VFS перед тестом
     import shutil
     if os.path.exists(vfs_path):
         shutil.rmtree(vfs_path)
     os.makedirs(vfs_path, exist_ok=True)
     
     yield vfs_path
+    
+    # Не очищаем после теста, чтобы можно было проверить результаты
+'''
+
+# Записываем файлы
+with open('modified_tests/test_vfs.py', 'w') as f:
+    f.write(test_vfs_content)
+
+with open('modified_tests/conftest.py', 'w') as f:
+    f.write(conftest_content)
+
+print("Test files created successfully")
 EOF
+        
+        python3 create_test_files.py
+        
+        echo "=== Modified test files created ==="
+        ls -la modified_tests/
+        echo "--- test_vfs.py ---"
+        head -20 modified_tests/test_vfs.py
       
     - name: Build and create package
       run: |
@@ -140,6 +178,7 @@ EOF
     - name: Setup test container
       run: |
         echo "=== Setting up test container ==="
+        # Запускаем контейнер в фоне
         docker run -d --name kubsh-test \
           --device /dev/fuse \
           --cap-add SYS_ADMIN \
@@ -148,13 +187,17 @@ EOF
           -e DEBUG=1 \
           tyvik/kubsh_test:master tail -f /dev/null
         
+        # Устанавливаем зависимости
         docker exec kubsh-test bash -c "
           apt-get update
           apt-get install -y fuse3 adduser
           ln -sf /usr/lib/x86_64-linux-gnu/libfuse3.so /usr/lib/x86_64-linux-gnu/libfuse3.so.3
         "
         
+        # Копируем пакет в контейнер
         docker cp kubsh.deb kubsh-test:/mnt/
+        
+        # Копируем модифицированные тесты в контейнер
         docker cp modified_tests/test_vfs.py kubsh-test:/opt/test_vfs.py
         docker cp modified_tests/conftest.py kubsh-test:/opt/conftest.py
       
@@ -165,20 +208,30 @@ EOF
           echo '=== Installing package ==='
           cd /mnt && apt-get install -y ./kubsh.deb
           
-          echo '=== Running tests with modified files ==='
+          echo '=== Checking kubsh permissions ==='
+          ls -la /usr/bin/kubsh
+          
+          echo '=== Running VFS tests with modified files ==='
           cd /opt
           
-          echo '--- Running VFS tests ---'
-          python3 -m pytest test_vfs.py -v --log-cli-level=DEBUG || true
+          # Проверяем, что наши файлы на месте
+          echo '--- Checking modified test files ---'
+          ls -la test_vfs.py conftest.py
+          echo 'First 5 lines of test_vfs.py:'
+          head -5 test_vfs.py
           
-          echo -e '\n--- Running basic tests ---'
-          python3 -m pytest test_basic.py -v --log-cli-level=DEBUG || true
+          # Запускаем только тесты VFS
+          echo -e '\n--- Running test_vfs_add_user ---'
+          python3 -m pytest test_vfs.py::test_vfs_add_user -v --log-cli-level=DEBUG || true
           
-          echo -e '\n--- Debug info ---'
-          echo 'Last 5 users in /etc/passwd:'
-          tail -5 /etc/passwd || true
-          echo -e '\nVFS directory contents:'
-          ls -la /opt/users/ || true
+          echo -e '\n--- Running test_vfs_remove_user ---'
+          python3 -m pytest test_vfs.py::test_vfs_remove_user -v --log-cli-level=DEBUG || true
+          
+          # Запускаем оригинальные тесты для сравнения
+          echo -e '\n--- Running original VFS tests for comparison ---'
+          cp test_vfs.py test_vfs_original.py
+          cp conftest.py conftest_original.py
+          python3 -m pytest test_vfs_original.py -v --log-cli-level=DEBUG 2>&1 | tail -50 || true
         "
       
     - name: Cleanup
